--- a/oxford-hack/styles/globals.css
+++ b/oxford-hack/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-.button{
-    @apply items-center justify-evenly flex  hover:bg-five py-1 px-5 rounded-md flex-row w-[125px] transition duration-300 ;
+.button {
+  @apply items-center justify-evenly flex  hover:bg-five py-1 px-5 rounded-md flex-row w-[125px] transition duration-300;
+}
+
+.side-button {
+  @apply hover:transition outline-none duration-500 ease-in-out text-white scale-[2] hover:scale-[2.3] hover:cursor-pointer;
 }
